make navbar mobile responsive

--- a/index.html
+++ b/index.html
@@ -33,6 +33,26 @@
 
 <body>
 <section id="home" class="container-fluid vertical-center bg">
+  <nav class = "navbar navbar-default" role = "navigation">
+   <div class = "navbar-header">
+      <button type = "button" class = "navbar-toggle"
+         data-toggle = "collapse" data-target = "#main-navbar">
+         <span class = "sr-only">Toggle navigation</span>
+         <span class = "icon-bar"></span>
+         <span class = "icon-bar"></span>
+         <span class = "icon-bar"></span>
+      </button>
+   </div>
+   <div class = "collapse navbar-collapse" id = "main-navbar">
+
+        <h4><ul class="horizontal">
+          <li><a href="#project">Projects</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="http://blog.tanyapowell.co.uk">Blog</a></li>
+        </ul></h4>
+   </div>
+ </nav>
   <hr>
   <h1>{ Tanya Powell }</h1>
   <h3 style="padding-bottom: 0">Software Developer</h3>
@@ -40,7 +60,7 @@
     <div class="col-md-2"></div>
     <div class="col-md-8">
       <p style="text-align: center">Hello and Welcome to the Tanya Powell Experience</p>
-      <p style="text-align: center">If I'm not at my desk writing code, you'll find my in the kitchen making something healthy, fun and nutritious. I talk about technology on Twitter, blog about Fashion Technology for <a href=“http://www.bellaviee.com”>BellaViee</a> and I'm finally getting back into photography after a long break. </p></div>
+      <p style="text-align: center">If I'm not at my desk writing code, you'll find my in the kitchen making something healthy, fun and nutritious. I talk about technology on Twitter, blog about Fashion Technology for <a href="http://www.bellaviee.com">BellaViee</a> and I'm finally getting back into photography after a long break. </p></div>
     <div class="col-md-2"></div>
   </div>
 <br>
@@ -56,17 +76,6 @@
     </div>
 
   <hr>
-
-<div class="collapse navbar-collapse" id="main-navbar">
-  <nav class="nav">
-    <h4><ul class="horizontal">
-      <li><a href="#project">Projects</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#contact">Contact</a></li>
-      <li><a href="http://blog.tanyapowell.co.uk">Blog</a></li>
-    </ul></h4>
-  </nav>
-</div>
 </section>
 
 <section id="project" class="container-fluid vertical-center bg-proj">
