added bellaviee blurb

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Tanya Powell</title>
   <meta name="p:domain_verify" content="b42540c314a1248a231bba403bde5b2f"/>
-  <meta name="description" content="Tanya Powell's Github Page">
+  <meta name="description" content="Tanya Powell">
   <meta name="author" content="Tanya Powell">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.min.css">
@@ -60,7 +60,7 @@
     <div class="col-md-2"></div>
     <div class="col-md-8">
       <p style="text-align: center">Hello and Welcome to the Tanya Powell Experience</p>
-      <p style="text-align: center">If I'm not at my desk writing code, you'll find my in the kitchen making something healthy, fun and nutritious. I talk about technology on Twitter, blog about Fashion Technology for <a href="http://www.bellaviee.com">BellaViee</a> and I'm finally getting back into photography after a long break. </p></div>
+      <p style="text-align: center">If I'm not at my desk writing code, you'll find my in the kitchen making something healthy, fun and nutritious. I talk about technology on<a href="https://twitter.com/tanyapowell"> Twitter</a>, blog about Fashion Technology for <a href="http://www.bellaviee.com">BellaViee</a> and I'm finally getting back into photography after a long break. </p></div>
     <div class="col-md-2"></div>
   </div>
 <br>
@@ -81,16 +81,12 @@
 <section id="project" class="container-fluid vertical-center bg-proj">
   <h1>Projects</h1>
   <div class="row">
-  <div class="col-md-2"></div>
-  <div class="col-md-8"><p>Chupa chups marshmallow tiramisu chocolate jujubes cookie sugar plum jelly beans pastry. Gummi bears biscuit lemon drops tart powder gummi bears. Cheesecake jelly croissant tart pie. Tiramisu cupcake chocolate sweet roll danish. Cookie gummi bears sugar plum soufflé chocolate bar carrot cake. Soufflé macaroon pudding candy cake sesame snaps dragée gingerbread. Soufflé jelly jelly macaroon brownie cake macaroon fruitcake.</p></div>
-  <div class="col-md-2"></div>
-  </div>
-  <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-5"><a href="http://www.bellaviee.com"><img class="project-img"
       src="https://s3-eu-west-1.amazonaws.com/tanyapowell/bellaviee.png"></a>
-      <p>Sweet roll fruitcake sweet roll chocolate cake jelly-o dragée oat cake bonbon chocolate bar. Chocolate cake croissant chocolate bar powder donut lemon drops sweet. Cookie gummi bears icing cupcake pudding marzipan gummies.</p>
+      <p>Lifestyle Blog <a href="http://www.bellaviee.com">BellaViee</a> brings you tips for life, style, beauty and well-being. Aiming to bring you exclusive content to give you inspirational and innovative ideas that add value to your lives. BellaViee covers personal growth, event-planning, exclusive interviews, behind the scenes sneak peaks, experiences in London and abroad as well as top tips for all things  style, beauty and well-being.</p>
     </div>
+    <br>
     <div class="col-md-5"><a href="http://prototype.londonluxuryandlife.com/"><img class="project-img" src="https://s3-eu-west-1.amazonaws.com/tanyapowell/LLAL.png"></a>
       <p>Sweet roll fruitcake sweet roll chocolate cake jelly-o dragée oat cake bonbon chocolate bar. Chocolate cake croissant chocolate bar powder donut lemon drops sweet. Cookie gummi bears icing cupcake pudding marzipan gummies.</p>
     </div>
