project and skills update

--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 
 <section id="project" class="container-fluid vertical-center bg-proj">
   <h1>Projects</h1>
+  <p>Software Engineer and Web Designer for the below projects</p>
   <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-5"><a href="http://www.bellaviee.com"><img class="project-img"
@@ -88,7 +89,7 @@
     </div>
     <br>
     <div class="col-md-5"><a href="http://prototype.londonluxuryandlife.com/"><img class="project-img" src="https://s3-eu-west-1.amazonaws.com/tanyapowell/LLAL.png"></a>
-      <p>Sweet roll fruitcake sweet roll chocolate cake jelly-o dragée oat cake bonbon chocolate bar. Chocolate cake croissant chocolate bar powder donut lemon drops sweet. Cookie gummi bears icing cupcake pudding marzipan gummies.</p>
+      <p>Blog for Londoners bringing content and behind the scenes glimpses at the most luxurious and exclusive events London has to offer</p>
     </div>
     <div class="col-md-1"></div>
   </div>
@@ -97,8 +98,12 @@
 <section id="skills" class="container-fluid vertical-center bg-skill">
   <h1>Skills</h1>
   <div class="row">
-  <div class="col-md-2"></div>
-  <div class="col-md-8"><p>Chupa chups marshmallow tiramisu chocolate jujubes cookie sugar plum jelly beans pastry. Gummi bears biscuit lemon drops tart powder gummi bears. Cheesecake jelly croissant tart pie. Tiramisu cupcake chocolate sweet roll danish. Cookie gummi bears sugar plum soufflé chocolate bar carrot cake. Soufflé macaroon pudding candy cake sesame snaps dragée gingerbread. Soufflé jelly jelly macaroon brownie cake macaroon fruitcake.</p></div>
+  <div class="col-md-2"><p>HTML5</p></div>
+  <div class="col-md-2"><p>SCSS</p></div>
+  <div class="col-md-2"><p>C++</p></div>
+  <div class="col-md-2"><p>.NET</p></div>
+  <div class="col-md-2"><p>PHP</p></div>
+  <div class="col-md-2"><p>Scrum Master</p></div>
   </div>
   <div class="col-md-2"></div>
 </section>
