--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div class="col-md-2"></div>
     <div class="col-md-8">
       <p style="text-align: center">Hello and Welcome to the Tanya Powell Experience</p>
-      <p style="text-align: center">If I'm not at my desk writing code, you'll find my in the kitchen making something healthy, fun and nutritious. I talk about technology on<a href="https://twitter.com/tanyapowell"> Twitter</a>, blog about Fashion Technology for <a href="http://www.bellaviee.com">BellaViee</a> and I'm finally getting back into photography after a long break. </p></div>
+      <p style="text-align: center">If I'm not at my desk writing code, you'll find my in the kitchen making something healthy, fun and nutritious. I talk about technology on<a href="https://twitter.com/tanya_powell"> Twitter</a>, blog about Fashion Technology for <a href="http://www.bellaviee.com">BellaViee</a> and I'm finally getting back into photography after a long break. </p></div>
     <div class="col-md-2"></div>
   </div>
 <br>
