--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="author" content="Tanya Powell">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="style.min.css">
+  <link rel="shortcut icon" href="favicon.ico" />
   <!-- Analytics -->
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
