dev change to engineer

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
  </nav>
   <hr>
   <h1>{ Tanya Powell }</h1>
-  <h3 style="padding-bottom: 0">Software Developer</h3>
+  <h3 style="padding-bottom: 0">Software Engineer</h3>
   <div style="padding-top: 1px" class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8">
