--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Tanya Powell</title>
+  <title>Tanya Powell Personal Site</title>
   <meta name="p:domain_verify" content="b42540c314a1248a231bba403bde5b2f"/>
-  <meta name="description" content="Tanya Powell">
+  <meta name="description" content="Personal website of Tanya Powell | Software Engineer">
   <meta name="author" content="Tanya Powell">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=2">
   <link rel="stylesheet" type="text/css" href="style.min.css">
   <link rel="shortcut icon" href="favicon.ico" />
   <!-- Analytics -->
