--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <h5>
   <a href="mailto:hello@tanyapowell.co.uk?subject=Hey Tanya"><i class="fa fa-envelope fa-1x"></i>  hello@tanyapowell.co.uk</a></h5>
   <h5><ul class="horizontal">
-    <li><a href="https://twitter.com/tanyapowell"><i class="fa fa-twitter fa-2x"></a></i></li>
+    <li><a href="https://twitter.com/tanya_powell"><i class="fa fa-twitter fa-2x"></a></i></li>
     <li><a href="https://GitHub.com/tanyapowell"><i class="fa fa-github fa-2x"></a></i></li>
     <li><a href="https://uk.linkedin.com/in/tanyapowell"><i class="fa fa-linkedin fa-2x"></a></i></li>
     <li><a href="https://pinterest.com/tanya_powell"><i class="fa fa-pinterest fa-2x"></a></i></li>
