footer added to lead breadcrumbs back to main site

--- a/whfnp-gallery/index.html
+++ b/whfnp-gallery/index.html
@@ -12,6 +12,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="assets/css/main.css">
         <link rel="stylesheet" type="text/css" media="screen" title="Custom Settings" href="assets/css/custom.css" >
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
         <script src="assets/js/libs/modernizr.custom.23122.js"></script>
     </head>
     <body class="has-header row-spacing-md" data-pagination-style="scroll" data-target-row-height="200">
@@ -158,4 +159,7 @@
         <script src="assets/js/libs/jquery.velocity.min.js"></script>
         <script src="assets/js/main.js"></script>
     </body>
+    <footer>
+        <h5 style="text-align: center">Made with <i class="fa fa-heart"></i> by <a href="http://tanyapowell.co.uk">Tanya Powell</a></h5>
+    </footer>
 </html>
