bellaviee removed from bio

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
       </button>
    </div>
    <div class = "collapse navbar-collapse" id = "main-navbar">
-
         <h4><ul class="horizontal">
           <li><a href="#project">Projects</a></li>
           <li><a href="#skills">Skills</a></li>
@@ -61,7 +60,7 @@
     <div class="col-md-2"></div>
     <div class="col-md-8">
       <p style="text-align: center">Hello and Welcome to the Tanya Powell Experience</p>
-      <p style="text-align: center">If I'm not at my desk writing code, you'll find me in the kitchen making something healthy, fun and nutritious. I talk about technology on<a href="https://twitter.com/tanya_powell"> Twitter</a>, blog about Fashion Technology for <a href="http://www.bellaviee.com">BellaViee</a> and I'm finally getting back into photography after a long break. </p></div>
+      <p style="text-align: center">If I'm not at my desk writing code, you'll find me in the kitchen whipping up something exciting. I talk about technology on<a href="https://twitter.com/tanya_powell"> Twitter</a>, I'm a <a href="womenhackfornonprofits.com">Women Hack for Non Profits</a> Board member and I'm finally getting back into photography after a long break. </p></div>
     <div class="col-md-2"></div>
   </div>
 <br>
@@ -83,6 +82,12 @@
   <h1>Projects</h1>
   <p>Software Engineer and Web Designer for the below projects</p>
   <div class="row">
+    <div class="col-md-2"></div>
+    <div class="col-md-8">
+      <p style="text-align: center">Hello and Welcome to the Tanya Powell Experience</p>
+    <div class="col-md-2"></div>
+  </div>
+  <div class="row">
     <div class="col-md-1"></div>
     <div class="col-md-5"><a href="http://www.bellaviee.com"><img class="project-img"
       src="https://s3-eu-west-1.amazonaws.com/tanyapowell/bellaviee.png"></a>
@@ -99,12 +104,12 @@
 <section id="skills" class="container-fluid vertical-center bg-skill">
   <h1>Skills</h1>
   <div class="row">
-  <div class="col-md-2"><p>HTML5</p></div>
-  <div class="col-md-2"><p>SCSS</p></div>
-  <div class="col-md-2"><p>C++</p></div>
-  <div class="col-md-2"><p>.NET</p></div>
-  <div class="col-md-2"><p>PHP</p></div>
-  <div class="col-md-2"><p>Scrum Master</p></div>
+    <div class="col-md-2"><p>HTML5</p></div>
+    <div class="col-md-2"><p>SCSS</p></div>
+    <div class="col-md-2"><p>C++</p></div>
+    <div class="col-md-2"><p>.NET</p></div>
+    <div class="col-md-2"><p>Node.js</p></div>
+    <div class="col-md-2"><p>MongoDB</p></div>
   </div>
 </section>
 
