--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
   <p>Software Engineer and Web Designer for the below projects</p>
   <div class="row">
     <div class="col-md-2"></div>
-    <div class="col-md-8">
-      <p style="text-align: center">Hello and Welcome to the Tanya Powell Experience</p>
-    <div class="col-md-2"></div>
+    <!-- <div class="col-md-8">
+      <p style="text-align: center">Pimp My Cause</p>
+    <div class="col-md-2"></div> -->
   </div>
   <div class="row">
     <div class="col-md-1"></div>
