--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 {% include about.html %}
 {% include community.html %}
+{% include talks.html %}
 {% include projects.html %}
 {% include skills.html %}
 {% include contact.html %}
