--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@tanya_powell" />
+    <meta name="twitter:title" content="Tanya Powell - Website" />
+    <meta name="twitter:description" content="Find out what Tanya is up to these days" />
+    <meta name="twitter:image" content="https://s3-eu-west-1.amazonaws.com/tanyapowell/social.png" />
     <title>t powell</title>
     <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.4/css/bootstrap.min.css" integrity="sha384-2hfp1SzUoho7/TsGGGDaFdsuuDL0LX2hnUp6VkX3CUQ2K4K+xjboZdsXyp4oUHZj" crossorigin="anonymous">
